css/styles.css
/* GLOBAL */

body, html {
    font-family: 'PT Sans', sans-serif;
    font-size: 18px;
    color: #FFF;
    -webkit-font-smoothing: antialiased !important;
    -moz-osx-font-smoothing: grayscale;
    text-shadow: none;
    text-rendering: optimizeLegibility !important;
}

body {
    background-color: #F1C40F;
    color: #FFF;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-content: stretch;
    -ms-flex-line-pack: stretch;
    align-content: stretch;
    -webkit-align-items: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    min-height: 100vh;
}

::selection {
    background: #3498DB;
    color: #FFF;
}

::-moz-selection {
    background: #3498DB;
    color: #FFF;
}

/* HEADER */

header {
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
    -webkit-flex: 0 0 50px;
    -ms-flex: 0 0 50px;
    flex: 0 0 50px;
    -webkit-align-self: auto;
    -ms-flex-item-align: auto;
    align-self: auto;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-content: stretch;
    -ms-flex-line-pack: stretch;
    align-content: stretch;
    -webkit-align-items: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    padding: 1em;
}

.back {
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
    align-self: center;
}

.back button {
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    background: transparent;
    border: none;
    cursor: pointer;
}

.back button.disabled {
    cursor: not-allowed;
    opacity: .8;
}

.back button::after {
    content: '';
    display: block;
    position: relative;
    left: 50%;
    top: 50%;
    width: 50px;
    height: 50px;
    margin-left: -25px;
    margin-top: -45px;
    background: #C7A002;
    border-radius: 100%;
    opacity: .6;
    transform: scale(0);
}

@keyframes ripple {
    0% {
        transform: scale(0);
    }
    20% {
        transform: scale(1);
    }
    100% {
        opacity: 0;
        transform: scale(1);
    }
}

.back button:not(:active):after {
    animation: ripple 1s ease-out;
}

.back button svg {
    width: 30px;
    fill: #C7A002;
    transition: fill ease-in .3s;
}

.back button:hover svg {
    fill: #FFF;
}

.back button.disabled:hover svg {
    fill: #C7A002;
}

.back button:focus {
    outline: none;
}

.logo {
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
    align-self: center;
}

.logo img {
    height: 53px;
}

.right {
    -webkit-order: 3;
    -ms-flex-order: 3;
    order: 3;
    align-self: center;
}

/* SURVEY CONTENTS */

div.content {
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
    -webkit-flex: 1 0 60vh;
    -ms-flex: 1 0 60vh;
    flex: 1 0 60vh;
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    align-self: center;
    font-size: 1.7rem;
    width: 60vw;
    text-align: left;
    padding: 2em 0;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-justify-content: center;
    -ms-flex-pack: justify;
    justify-content: center;
}

div.content h3 {
    margin: 0;
    font-weight: 400;
    text-transform: uppercase;
    font-size: .88rem;
    color: #C7A002;
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: flex-start;
    align-self: flex-start;
}

p.caption {
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: flex-start;
    align-self: flex-start;
}

.responses {
    -webkit-order: 3;
    -ms-flex-order: 3;
    order: 3;
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: flex-start;
    align-self: flex-start;
}

.responses ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

.responses ul li {
    padding: .2em 0;
}

label {
    cursor: pointer;
    margin-left: .5em;
    vertical-align: middle;
    transition: color linear .17s;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    color: #FFF;
}

input[type=radio] {
    width: .9em;
    height: .9em;
    font-family: inherit;
    font-size: 1.8rem;
    vertical-align: middle;
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    -o-appearance: none;
    appearance: none;
    background: #F1C40F;
    border-radius: 50%;
    box-sizing: border-box;
    border: .05em solid #C7A002;
    box-shadow: inset 0 0 0 0 #C7A002;
    position: relative;
    cursor: pointer;
    animation: radio .6s;
    transition: transform .3s cubic-bezier(.2, .3, 0, 1), box-shadow .3s cubic-bezier(.2, .3, 0, 1), border-color .4s linear .17s;
}

input[type=radio]:focus {
    outline: none;
}

input[type=radio]:active {
    transform: scale(.8);
}

input[type=radio]:checked {
    border-color: #F1C40F;
    transition: transform .3s cubic-bezier(.2, .3, 0, 1), box-shadow .3s cubic-bezier(.2, .3, 0, 1), border-color .4s linear .17s;
}

input[type=radio]:before, input[type=radio]:after {
    content: '';
    background: #F1C40F;
    height: 1em;
    width: 1em;
    position: absolute;
    transform: translate(.2728em, .4279em) rotate(44.91deg) scale(.3411, .1);
    transform-origin: 0 0;
    transition: transform .3s cubic-bezier(.2, .3, 0, 1), opacity .3s cubic-bezier(.2, .3, 0, 1);
    top: -.085em;
    left: -.125em;
}

input[type=radio]:checked::before, input[type=radio]:checked::after {
    background: #C7A002;
}

input[type=radio]:after {
    transform: translate(.8494em, .35em) rotate(135.22deg) scale(.5612, .1);
}

input[type=radio]:not(:checked):before {
    transform: translate(.505em, .455em) rotate(44.91deg) scale(.1, .1);
}

input[type=radio]:not(:checked):after {
    transform: translate(.575em, .525em) rotate(135.22deg) scale(.1, .1);
}

@keyframes radio {
    0% {
        transform: scale(0);
    }
    48% {
        transform: scale(1.2);
    }
}

input[type="checkbox"] {
    display: none;
}

input[type="checkbox"]+label {
    display: block;
    position: relative;
    padding-left: 1.5em;
    margin: 0;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
}

input[type="checkbox"]+label:last-child {
    margin-bottom: 0;
}

input[type="checkbox"]+label:before {
    content: '';
    display: block;
    width: 30px;
    height: 30px;
    border: 1px solid #C7A002;
    position: absolute;
    left: 0;
    top: 0;
    opacity: .6;
    transition: all .3s;
}

input[type="checkbox"]:checked+label:before {
    width: 10px;
    top: -5px;
    left: 10px;
    border-radius: 0;
    opacity: 1;
    border-color: #FFF;
    border-top-color: transparent;
    border-left-color: transparent;
    transform: rotate(45deg);
}

/* FOOTER */

footer {
    -webkit-order: 3;
    -ms-flex-order: 3;
    order: 3;
    -webkit-flex: 0 0 50px;
    -ms-flex: 0 0 50px;
    flex: 0 0 50px;
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    align-self: center;
    width: 100%;
}

footer .btn {
    font-family: 'PT Sans', sans-serif;
    font-size: 1.3rem;
    text-transform: uppercase;
    color: #EEE;
    width: 100%;
    text-align: center;
    background: #3498DB;
    cursor: pointer;
    padding: 1em 2em;
    border: none;
    -webkit-background-clip: padding-box;
    -moz-background-clip: padding;
    background-clip: padding-box;
    overflow: hidden;
    transition: all .3s cubic-bezier(0.25, 0.1, 0.25, 0.1);
}

footer .btn:focus {
    outline: none;
}

footer .btn::after {
    content: '';
    display: block;
    position: absolute;
    left: 50%;
    bottom: 0;
    width: 100%;
    height: 70px;
    margin-left: -50%;
    margin-top: -35px;
    background: rgba(255, 255, 255, 0.2);
    opacity: .6;
    transform: scale(0);
}

footer .btn:not(:active):after {
    animation: ripple 1s ease-out;
}

footer .btn:hover {
    color: #FFF;
    background: #2980b9;
}

